# solve_tenpuzzle

./: Cargo.toml  README.md  out.txt  out5.txt  outnot4.txt  outnot5.txt  pair.py
src/: eval.rs  lib.rs  main.rs  new_solver.rs  pattern.rs  solver.rs  tmp.rs
src/algorithm/: mod.rs
