[package]
name = "solve_tenpuzzle"
version = "0.1.0"
authors = ["Seiji Murai <trumpet.programing525@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num-rational = '0.4.0'
permutohedron = '0.2.4'
pprof = { version = "0.11", features = ["flamegraph"] }
